Updated Czech translation

--- a/help/cs/cs.po
+++ b/help/cs/cs.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager help master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
-"POT-Creation-Date: 2010-03-28 18:47+0000\n"
-"PO-Revision-Date: 2010-03-28 21:11+0100\n"
-"Last-Translator: Milan Knizek <knizek@volny.cz>\n"
+"POT-Creation-Date: 2010-09-18 04:23+0000\n"
+"PO-Revision-Date: 2010-09-18 21:28+0100\n"
+"Last-Translator: Milan Knížek <knizek@volny.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -791,11 +791,11 @@ msgstr "Colorimètre HCFR (colorimeter)"
 
 #: C/gnome-color-manager.xml:567(title)
 msgid "Which target types are supported?"
-msgstr "Které typy vzorníků jsou podporovány?"
+msgstr "Které typy obrazců jsou podporovány?"
 
 #: C/gnome-color-manager.xml:568(para)
 msgid "GNOME Color Manager supports the following types of targets:"
-msgstr "Správce barev GNOME podporuje následující typy vzorníků:"
+msgstr "Správce barev GNOME podporuje následující typy obrazců:"
 
 #: C/gnome-color-manager.xml:573(para)
 msgid "CMP DigitalTarget"
@@ -831,7 +831,7 @@ msgstr "IT8.7/2"
 
 #: C/gnome-color-manager.xml:615(title)
 msgid "Where do I purchase targets from?"
-msgstr "Kde mohu koupit vzorníky?"
+msgstr "Kde mohu koupit obrazce?"
 
 #: C/gnome-color-manager.xml:616(para)
 msgid ""
@@ -840,10 +840,10 @@ msgid ""
 "<ulink url=\"http://www.targets.coloraid.de/\" type=\"http\">Wolf Faust</"
 "ulink> at a very fair price."
 msgstr ""
-"Vzorníky můžete koupit od známých výrobců jako jsou KODAK, X-Rite a "
-"LaserSoft v různých internetových obchodech. Můžete je též koupit od <ulink "
-"url=\"http://www.targets.coloraid.de/\" type=\"http\">Wolfa Fausta</ulink> "
-"za velmi příznivou cenu."
+"Obrazce můžete koupit od známých výrobců jako jsou KODAK, X-Rite a LaserSoft "
+"v různých internetových obchodech. Můžete je též koupit od <ulink url="
+"\"http://www.targets.coloraid.de/\" type=\"http\">Wolfa Fausta</ulink> za "
+"velmi příznivou cenu."
 
 #: C/gnome-color-manager.xml:626(title)
 msgid "About"
