[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -530,7 +530,7 @@ msgstr "Tundmatu seade"
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 msgid "Could not detect screen type"
-msgstr "Ekraani liiki suudetud automaatselt tuvastada"
+msgstr "Ekraani liiki ei suudetud automaatselt tuvastada"
 
 #. TRANSLATORS: dialog message
 msgid ""
