[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-08-31 15:00+0000\n"
-"PO-Revision-Date: 2010-08-31 18:54+0300\n"
+"PO-Revision-Date: 2010-09-24 22:20+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1345,7 +1345,7 @@ msgstr "Raudvara tugi puudub"
 
 #. TRANSLATORS: this is where the device has been setup but is not connected
 msgid "disconnected"
-msgstr "ühendus katkestatud"
+msgstr "pole ühendatud"
 
 #. TRANSLATORS: the profile was of the wrong sort for this device
 msgid "Could not import profile"
