--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+Version 2.32.0
+~~~~~~~~~~~~~~~
+Released: 2010-09-27
+
+* Translations
+ - Added Arabic translation (Khaled Hosny)
+ - Added Hungarian translation (Gabor Kelemen)
+ - Added Romanian translation (Lucian Adrian Grijincu)
+ - Updated Brazilian Portuguese (Flamarion Jorge, Djavan Fagundes)
+ - Updated Czech translation (Milan Knížek)
+ - Updated Greek translation (Bakaoukas Nikolaos)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Japanese translation (Takayuki KUSANO)
+ - Updated Russian help translation (Alexandre Prokoudine)
+
+* Bugfix:
+ - Fix compile on newer GTK2 versions where GDK_DISPLAY() is deprecated (Richard Hughes)
+ - Show the correct copyright notice when a profile has used markup in the description (Richard Hughes)
+
 Version 2.31.92
 ~~~~~~~~~~~~~~~
 Released: 2010-09-16
