--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,85 @@
+Version 2.91.1
+~~~~~~~~~~~~~~
+Released: 2010-10-05
+
+* Translations
+ - Added Arabic translation (Khaled Hosny)
+ - Added Catalan translation (Joan Duran)
+ - Added Greek translation (Michael Kotsarinis)
+ - Added Hungarian translation (Gabor Kelemen)
+ - Added Japanese translation (Ryo Fujita, Takayuki KUSANO)
+ - Added Malayalam translatio (students from MES Engineering College Kuttippuram)
+ - Added Romanian translation (Lucian Adrian Grijincu)
+ - Added Serbian translation (Милош Поповић)
+ - Added Simplified Chinese help translation (Teliute)
+ - Added Traditional Chinese translation(Hong Kong and Taiwan) (Chao-Hsiung Liao)
+ - Updated British English translation (Bruce Cowan)
+ - Updated Czech help translation (Milan Knizek)
+ - Updated Czech translation (Milan Knizek)
+ - Updated Danish translation (Ask H. Larsen, Kenneth Nielsen)
+ - Updated Estonian translation (Mattias Põldaru)
+ - Updated French translation (Claude Paroz)
+ - Updated Galician translations (Fran Diéguez)
+ - Updated German translation (Christian Kirbach, Mario Blättermann)
+ - Updated Greek translation (Bakaoukas Nikolaos)
+ - Updated Hebrew translation (Yaron Shahrabani)
+ - Updated Indonesian translation (Dirgita)
+ - Updated Italian translation (Francesco Groccia)
+ - Updated Lithuanian translation (Žygimantas Beručka, Aurimas Černius)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Portuguese translation (António Lima)
+ - Updated Russian help translation (Alexandre Prokoudine)
+ - Updated Russian translation (Alexandre Prokoudine)
+ - Updated Slovenian translation (Andrej Žnidaršič, Matej Urbančič)
+ - Updated Simplified Chinese translation (Aron Xu, Jessica Ban, Yinghua Wang)
+ - Updated Spanish translation (Jorge González)
+ - Updated Swedish translation (Daniel Nylander)
+ - Updated Tamil translation (Dr.Tirumurti Vasudevan)
+
+* New Features:
+ - Raise the GTK build dep to 2.91.0 (Richard Hughes)
+ - Add a gnome-settings-daemon module to fix some hard to fix bugs (Richard Hughes)
+ - Add a QPcard 202 reference image (Pascal de Bruijn)
+ - Add two more example images to the viewer (Fanch The System)
+ - Add another example image to the viewer (Claes H)
+ - Add a reverse-engineered driver to talk to the HUEY colorimeter (Richard Hughes)
+ - Add the start of a reverse engineerered ColorMunki driver (Richard Hughes)
+ - Add a simple command gcm-ddc-util to be able to send custom DDC packets to a monitor in userspace (Richard Hughes)
+ - Add a simple parser that can parse the output of the Beagle USB capture device (Richard Hughes)
+ - Add a status property to GcmSensor to help GUI applications (Richard Hughes)
+ - Add a udev prober that makes DDC/CI i2c devices available for the user to use (Richard Hughes)
+ - Add GcmCalibrateNative so we can do a calibration without argyllcms (Richard Hughes)
+ - Add gcm-dump-to-values to discover new values in the register space (Richard Hughes)
+ - Add GcmSampleWindow so we can measure known colors in gcm-picker (Richard Hughes)
+ - Add GcmUsb, a simple object to integrate libusb-1 with the GLib event loop
+ - Add some GLSL demo code that uses a 3D texture (Richard Hughes)
+ - Add support for 100% gray colorspaces (Richard Hughes)
+ - Allow the user to flick between different images in the profile viewer (Richard Hughes)
+ - Drop GcmXserver, GcmScreen and libgnomedesktop3 and make the X11 code faster and cleaner (Richard Hughes)
+ - Make gcm-parse-huey be able to parse argyll -D9 traces (Richard Hughes)
+ - Make gcm-picker work with native sensor devices too (Richard Hughes)
+ - Split off a library, libcolor-glib for internal use (Richard Hughes)
+
+* Bugfix:
+ - Add gcm-compat.h to deal with unreleases versions of libusb (Richard Hughes)
+ - Allow the end user to disable -WError (Andy Lutomirski)
+ - Do not crash if gcm_libusb_pollfd_remove_all() is called without assigning a device (Richard Hughes)
+ - Do not install the low-level unitilies, and move them to 'tools' (Richard Hughes)
+ - Do not try to apply devices that are not connected (Richard Hughes)
+ - Ensure clicking 'Reset' actually resets the device and saves settings (Richard Hughes)
+ - Ensure EDID strings are printable, and ignore totally junk strings (Richard Hughes)
+ - Ensure we can compile with vte3 (Richard Hughes)
+ - Fix a crash in gcm-picker if we compiled without VTE support (Richard Hughes)
+ - Fix .desktop file (Javier Jardón)
+ - Fix GTK3 compile (Richard Hughes)
+ - Fix up a translator comment. Fixes #625504 (Richard Hughes)
+ - Get rid of the 'Color Profiles' section header to reduce panel clutter (Richard Hughes)
+ - Include the time in the calibration basename as we can calibrate more than once per day (Richard Hughes)
+ - Only disable deprecated code for --enable-strict builds (Richard Hughes)
+ - Rename the softproof intent to 'Print Preview' (Richard Hughes)
+ - Show the correct copyright notice when a profile has used markup in the description (Richard Hughes)
+
 Version 2.31.4
 ~~~~~~~~~~~~~~
 Released: 2010-07-01
