Updated French doc translation

--- a/help/fr/fr.po
+++ b/help/fr/fr.po
@@ -30,12 +30,14 @@ msgstr ""
 #: C/gnome-color-manager.xml:226(None)
 msgid "@@image: 'figures/gcm-basic.png'; md5=6b7faa5c9598d5b9e9cfadc725bd5e61"
 msgstr ""
+"@@image: 'figures/gcm-basic.png'; md5=6b7faa5c9598d5b9e9cfadc725bd5e61"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:292(None)
 msgid "@@image: 'figures/gcm-adjust.png'; md5=da058b39555e191e120e7d9c98705e76"
 msgstr ""
+"@@image: 'figures/gcm-adjust.png'; md5=da058b39555e191e120e7d9c98705e76"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
