Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-24 12:55+0000\n"
-"PO-Revision-Date: 2010-05-25 18:28+0200\n"
+"POT-Creation-Date: 2010-10-13 14:31+0000\n"
+"PO-Revision-Date: 2010-10-20 08:20+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr ""
 #: C/gnome-color-manager.xml:188(None)
 msgid "@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200"
 msgstr ""
-"@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200"
+"@@image: 'figures/gcm-import.png'; md5=d189ed327ebd94cbe2958a37d3466200\t"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
@@ -384,7 +384,7 @@ msgstr ""
 #: C/gnome-color-manager.xml:170(userinput)
 #, no-wrap
 msgid "gcm-import <filename><![CDATA[<filepath>]]></filename>"
-msgstr "gcm-import <nomre-de-archivo><![CDATA[<ruta-al-archivo>]]></nombre-de-archivo>"
+msgstr "gcm-import <filename><![CDATA[<ruta-al-archivo>]]></filename>"
 
 #: C/gnome-color-manager.xml:175(title)
 msgid "Importing profiles"
