Updated Swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-10-22 12:33+0200\n"
-"PO-Revision-Date: 2010-10-22 12:36+0100\n"
+"POT-Creation-Date: 2010-10-22 15:25+0200\n"
+"PO-Revision-Date: 2010-10-22 15:38+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -45,9 +45,8 @@ msgid "Color Profile Viewer"
 msgstr "Färgprofilvisare"
 
 #: ../data/gcm-viewer.desktop.in.h:2
-#, fuzzy
 msgid "Inspect and compare installed color profiles"
-msgstr "Installera systemfärgprofiler"
+msgstr "Inspektera och jämför installerade färgprofiler"
 
 #. TRANSLATORS: turn on all debugging
 #: ../libcolor-glib/gcm-debug.c:104
@@ -166,17 +165,17 @@ msgstr "Misslyckades med att lägga till virtuell enhet"
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/cc-color-panel.c:707
 msgid "Install calibration and profiling software?"
-msgstr ""
+msgstr "Installera programvara för kalibrering och profilering?"
 
 #. TRANSLATORS: dialog message saying the argyllcms is not installed
 #: ../src/cc-color-panel.c:711
 msgid "Calibration and profiling software is not installed."
-msgstr ""
+msgstr "Programvara för kalibrering och profilering är inte installerad."
 
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/cc-color-panel.c:713
 msgid "These tools are required to build color profiles for devices."
-msgstr ""
+msgstr "Dessa verktyg krävs för att bygga färgprofiler för enheter."
 
 #. TRANSLATORS: button, skip installing a package
 #: ../src/cc-color-panel.c:718
@@ -212,7 +211,7 @@ msgstr "Profileringen är färdig"
 #. TRANSLATORS: this is displayed when the profile is crap
 #: ../src/cc-color-panel.c:1253
 msgid "This profile does not have the information required for whole-screen color correction."
-msgstr ""
+msgstr "Denna profil saknar information som krävs för färgkorrigering för hela skärmen."
 
 #. TRANSLATORS: could not read file
 #: ../src/cc-color-panel.c:1326
@@ -232,28 +231,28 @@ msgstr "Kan inte skapa profil: Ingen enhet har valts"
 #. TRANSLATORS: this is when the button is insensitive because the distro compiled GCM without VTE
 #: ../src/cc-color-panel.c:1489
 msgid "Cannot create profile: Virtual console support is missing"
-msgstr ""
+msgstr "Kan inte skapa profil: Stöd för virtuell konsoll saknas"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1501
 msgid "Cannot create profile: The display device is not connected"
-msgstr ""
+msgstr "Kan inte skapa profil: Skärmenheten är inte ansluten"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1509
 msgid "Cannot create profile: The display driver does not support XRandR 1.3"
-msgstr ""
+msgstr "Kan inte skapa profil: Grafikdrivrutinen saknar stöd för XRandR 1.3"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1517
 #: ../src/cc-color-panel.c:1532
 msgid "Cannot create profile: The measuring instrument is not plugged in"
-msgstr ""
+msgstr "Kan inte skapa profil: Mätinstrumentet är inte anslutet"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1540
 msgid "Cannot create profile: The measuring instrument does not support printer profiling"
-msgstr ""
+msgstr "Kan inte skapa profil: Mätinstrumentet saknar stöd för utskriftsprofilering"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1547
@@ -262,7 +261,7 @@ msgstr "Kan inte skapa en profil för denna typ av enhet"
 
 #: ../src/cc-color-panel.c:1626
 msgid "Per-device settings not supported. Check your display driver."
-msgstr ""
+msgstr "Inställningar per enhet stöds inte. Kontrollera din grafikdrivrutin."
 
 #. TRANSLATORS: this is where an output is not settable, but we are showing it in the UI
 #: ../src/cc-color-panel.c:1803
@@ -353,12 +352,12 @@ msgstr "Installera nu"
 #. TRANSLATORS: this is displayed when the profile is crap
 #: ../src/cc-color-panel.c:2963
 msgid "More color profiles could be automatically installed."
-msgstr ""
+msgstr "Fler färgprofiler kan installeras automatiskt."
 
 #. TRANSLATORS: we use this mode at login as we're sure there are no previous settings to clear
 #: ../src/gcm-apply.c:115
 msgid "Do not attempt to clear previously applied settings"
-msgstr ""
+msgstr "Försök inte att ta bort tidigare verkställda inställningar"
 
 #. TRANSLATORS: title, default paramters needed to calibrate_argyll
 #: ../src/gcm-calibrate-argyll.c:453
@@ -424,7 +423,7 @@ msgstr "Kopierar filer"
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:991
 msgid "Copying source image, chart data and CIE reference values."
-msgstr ""
+msgstr "Kopierar källbilden, diagramdata och CIE-referensvärden."
 
 #. TRANSLATORS: title, drawing means painting to the screen
 #: ../src/gcm-calibrate-argyll.c:1066
@@ -482,7 +481,7 @@ msgstr ""
 #. TRANSLATORS: title, patches are specific colours used in calibration
 #: ../src/gcm-calibrate-argyll.c:1931
 msgid "Wait for the ink to dry"
-msgstr ""
+msgstr "Vänta på att bläcket ska torka"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:1934
@@ -618,7 +617,7 @@ msgstr ""
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-argyll.c:2565
 msgid "Reading target"
-msgstr ""
+msgstr "Läser målet"
 
 #. TRANSLATORS: message, no firmware is available
 #: ../src/gcm-calibrate-argyll.c:2568
@@ -697,9 +696,8 @@ msgstr "Finjustering"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:2834
-#, fuzzy
 msgid "Preparing the data for the printer."
-msgstr "Copyright för profilen"
+msgstr "Förbereder data för skrivaren."
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:2840
@@ -850,7 +848,7 @@ msgstr "Bildfiler som stöds"
 #. TRANSLATORS: dialog for file->open dialog
 #: ../src/gcm-calibrate.c:820
 msgid "Select CIE reference values file"
-msgstr ""
+msgstr "Välj fil för CIE-referensvärden"
 
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-calibrate.c:840
@@ -896,15 +894,14 @@ msgstr "Vill du att de ska installeras?"
 #. TRANSLATORS: dialog message, if the user has the target file on a CDROM then there's no need for this package
 #: ../src/gcm-calibrate.c:1077
 msgid "If you already have the correct file, you can skip this step."
-msgstr ""
+msgstr "Du kan hoppa över detta steg om du redan har den korrekta filen."
 
 #. TRANSLATORS: this is the window title for when the user selects the calibration target.
 #. * A calibration target is an accuratly printed grid of colors, for instance:
 #. * the IT 8.7 targets available here: http://www.targets.coloraid.de/
 #: ../src/gcm-calibrate.c:1099
-#, fuzzy
 msgid "Please select a calibration target"
-msgstr "Ställ in enheten till kalibreringsläge."
+msgstr "Välj ett kalibreringsmål"
 
 #. TRANSLATORS: dialog message, preface. A calibration target looks like
 #. * this: http://www.colorreference.de/targets/target.jpg
@@ -935,7 +932,7 @@ msgstr ""
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:1125
 msgid "Please select the calibration target type which corresponds to your reference file."
-msgstr ""
+msgstr "Välj vilken typ av kalibreringsmål som motsvarar din referensfil."
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-dialog.c:567
@@ -995,12 +992,12 @@ msgstr "Introduktion till skärmkalibrering"
 #. TRANSLATORS: message text, an ICC profile is a file that characterizes the device
 #: ../src/gcm-calibrate-manual.c:217
 msgid "This dialog will help calibrate your display and create a custom ICC profile."
-msgstr ""
+msgstr "Denna dialogruta hjälper dig att kalibrera din skärm och skapa en anpassad ICC-profil."
 
 #. TRANSLATORS: message text, telling the user they are in for the long haul
 #: ../src/gcm-calibrate-manual.c:220
 msgid "The calibration will involve several steps so that an accurate profile can be obtained."
-msgstr ""
+msgstr "Kalibreringen innefattar ett flertal steg så att en exakt profil kan uppnås."
 
 #. TRANSLATORS: message text, this is a lie. It will take more than a few minutes, but we don't want to scare the hapless user
 #: ../src/gcm-calibrate-manual.c:223
@@ -1016,7 +1013,7 @@ msgstr ""
 #. TRANSLATORS: message text, tell the use that they can go back and forwards, as the human eye sucks
 #: ../src/gcm-calibrate-manual.c:237
 msgid "You can repeat the calibration steps as many times as you want."
-msgstr ""
+msgstr "Du kan upprepa kalibreringsstegen så många gånger som du önskar."
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-manual.c:249
@@ -1116,7 +1113,7 @@ msgstr "Beskrivning:"
 #. TRANSLATORS: this is the ICC profile copyright
 #: ../src/gcm-inspect.c:60
 msgid "Copyright:"
-msgstr "Copyright:"
+msgstr "Upphovsrätt:"
 
 #. TRANSLATORS: the root window of all the screens
 #: ../src/gcm-inspect.c:105
@@ -1154,9 +1151,8 @@ msgstr "Lämpliga profiler för:"
 
 #. TRANSLATORS: no profile has been asigned to this device
 #: ../src/gcm-inspect.c:274
-#, fuzzy
 msgid "There are no ICC profiles assigned to this file"
-msgstr "Det finns inga ICC-profiler för denna enhet"
+msgstr "Det finns inga ICC-profiler tilldelade till denna fil"
 
 #. TRANSLATORS: no profile has been asigned to this window
 #: ../src/gcm-inspect.c:406
@@ -1195,9 +1191,8 @@ msgstr "CMYK-färgrymd:"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:574
-#, fuzzy
 msgid "Show xserver properties"
-msgstr "Visa X11-egenskaper"
+msgstr "Visa xserver-egenskaper"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:577
@@ -1206,15 +1201,13 @@ msgstr "Hämta profilerna för en specifik enhet"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:580
-#, fuzzy
 msgid "Get the profiles for a specific file"
-msgstr "Skapa _profil för enhet"
+msgstr "Hämta profilerna för en specifik fil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:583
-#, fuzzy
 msgid "Get the profile for a specific window"
-msgstr "Skapa _profil för enhet"
+msgstr "Hämta profilen för ett specifikt fönster"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:586
@@ -1264,7 +1257,7 @@ msgstr ""
 #. TRANSLATORS: only able to install profiles as root
 #: ../src/gcm-install-system-wide.c:176
 msgid "This program can only be used by the root user."
-msgstr ""
+msgstr "Detta program kan endast användas av root-användaren."
 
 #. TRANSLATORS: only able to install profiles with an absolute path
 #: ../src/gcm-install-system-wide.c:185
@@ -1273,19 +1266,18 @@ msgstr ""
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:196
-#, fuzzy
 msgid "Failed to get content type:"
-msgstr "Misslyckades med att kopiera filen"
+msgstr "Misslyckades med att få innehållstyp:"
 
 #. TRANSLATORS: the content type is the detected type of file
 #: ../src/gcm-install-system-wide.c:206
 msgid "Content type was incorrect:"
-msgstr ""
+msgstr "Innehållstypen var felaktig:"
 
 #. TRANSLATORS: the program must never be directly run
 #: ../src/gcm-install-system-wide.c:215
 msgid "This program must only be run through pkexec."
-msgstr ""
+msgstr "Detta program får endast köras genom pkexec."
 
 #. TRANSLATORS: PolicyKit has gone all insane on us, and we refuse to parse junk
 #: ../src/gcm-install-system-wide.c:224
@@ -1372,7 +1364,7 @@ msgstr ""
 
 #: ../src/gcm-session.c:705
 msgid "Do not exit after the request has been processed"
-msgstr ""
+msgstr "Avsluta inte efter att begäran har behandlats"
 
 #. TRANSLATORS: program name, a session wide daemon to watch for updates and changing system state
 #: ../src/gcm-session.c:721
@@ -1454,7 +1446,7 @@ msgstr "Ta bort profilen permanent?"
 #. TRANSLATORS: dialog message
 #: ../src/gcm-viewer.c:289
 msgid "Are you sure you want to remove this profile from your system permanently?"
-msgstr ""
+msgstr "Är du säker på att du permanent vill ta bort denna profil från ditt system?"
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-viewer.c:292
@@ -1617,7 +1609,7 @@ msgstr "Enhetskalibrering"
 #. The user wants to analyse images that have been printed by a photo-processing lab
 #: ../data/gcm-calibrate.ui.h:10
 msgid "Generate profile from printed images"
-msgstr ""
+msgstr "Generera profil från utskrivna bilder"
 
 #: ../data/gcm-calibrate.ui.h:11
 msgid "Green:"
@@ -1644,9 +1636,8 @@ msgstr "Normal"
 
 #. The user is trying to create an ICC profile of a printer that is connected to the computer
 #: ../data/gcm-calibrate.ui.h:20
-#, fuzzy
 msgid "Profile locally attached printer"
-msgstr "Profiltyp:"
+msgstr "Profilera lokalt ansluten skrivare"
 
 #: ../data/gcm-calibrate.ui.h:21
 msgid "Projector"
@@ -1705,7 +1696,7 @@ msgstr "XYZ:"
 #. Button text, to get a single sample of color
 #: ../data/gcm-picker.ui.h:18
 msgid "_Measure"
-msgstr ""
+msgstr "_Mät"
 
 #: ../data/gcm-prefs.ui.h:1
 msgid "A working space is a default colorspace that is not associated with a specific device."
@@ -1776,9 +1767,8 @@ msgid "Image files can be dragged on this window to auto-complete the above fiel
 msgstr ""
 
 #: ../data/gcm-prefs.ui.h:29
-#, fuzzy
 msgid "Make default"
-msgstr "_Gör till standard"
+msgstr "Gör till standard"
 
 #: ../data/gcm-prefs.ui.h:30
 msgid "Manufacturer:"
@@ -1858,14 +1848,12 @@ msgstr ""
 
 #. Tab title, icc color spaces to use for different defaults
 #: ../data/gcm-prefs.ui.h:57
-#, fuzzy
 msgid "Working Spaces"
-msgstr "Ritar ut färgkartan"
+msgstr "Arbetsrymder"
 
 #: ../data/gcm-prefs.ui.h:58
-#, fuzzy
 msgid "_Apply basic display correction"
-msgstr "T_illämpa skärmkorrigering"
+msgstr "T_illämpa grundläggande skärmkorrigering"
 
 #. This is when the settings are set for all users, unless they have per-user settings themselves
 #: ../data/gcm-prefs.ui.h:60
