[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-08-31 15:00+0000\n"
-"PO-Revision-Date: 2010-08-31 18:54+0300\n"
+"PO-Revision-Date: 2010-10-17 15:22+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -274,7 +274,7 @@ msgstr "Kuva seadistamine"
 
 #. TRANSLATORS: dialog message
 msgid "Setting up display device for use…"
-msgstr "Kuvaseadme häälestamine kasutamiseks..."
+msgstr "Kuvaseadme häälestamine kasutamiseks…"
 
 #. TRANSLATORS: title, patches are specific colors used in calibration
 msgid "Printing patches"
@@ -326,7 +326,7 @@ msgstr "Seadme häälestamine"
 
 #. TRANSLATORS: dialog message
 msgid "Setting up the instrument for use…"
-msgstr "Kalibreerimisseadme kasutamiseks häälestamine..."
+msgstr "Kalibreerimisseadme kasutamiseks häälestamine…"
 
 #. TRANSLATORS: title, instrument is a hardware color calibration sensor
 msgid "Please attach instrument"
@@ -510,7 +510,7 @@ msgstr "Printimine lõpetati."
 
 #. TRANSLATORS: dialog message
 msgid "The print was aborted."
-msgstr "Printimine katkestati"
+msgstr "Printimine katkestati."
 
 #. TRANSLATORS: this is saved in the profile
 msgid "Unknown model"
@@ -530,7 +530,7 @@ msgstr "Tundmatu seade"
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 msgid "Could not detect screen type"
-msgstr "Ekraani liiki suudetud automaatselt tuvastada"
+msgstr "Ekraani liiki ei suudetud automaatselt tuvastada"
 
 #. TRANSLATORS: dialog message
 msgid ""
@@ -1148,7 +1148,7 @@ msgstr "Puudub"
 
 #. TRANSLATORS: this is where the user can click and import a profile
 msgid "Other profile…"
-msgstr "Muu profiil..."
+msgstr "Muu profiil…"
 
 #. TRANSLATORS: could not calibrate
 msgid "Failed to calibrate device"
@@ -1345,7 +1345,7 @@ msgstr "Raudvara tugi puudub"
 
 #. TRANSLATORS: this is where the device has been setup but is not connected
 msgid "disconnected"
-msgstr "ühendus katkestatud"
+msgstr "pole ühendatud"
 
 #. TRANSLATORS: the profile was of the wrong sort for this device
 msgid "Could not import profile"
