Updated Romanian translation

--- a/po/ro.po
+++ b/po/ro.po
@@ -839,7 +839,7 @@ msgstr ""
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:680
 msgid "Reset your display to the factory defaults."
-msgstr "Restabiliți afișajul la valorile din fabrică."
+msgstr "Resetează afișajul la valorile din fabrică."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate.c:683
@@ -2038,7 +2038,7 @@ msgstr "Configurează ca implicit pe _sistem"
 #~ msgstr "Elimină un profil de culoare din acest dispozitiv"
 
 #~ msgid "Reset the sliders to the default values"
-#~ msgstr "Restabilește glisoarele la valorile implicite"
+#~ msgstr "Resetează glisoarele la valorile implicite"
 
 #~ msgid "Serial number:"
 #~ msgstr "Număr de serie:"
