--- a/po/ro.po
+++ b/po/ro.po
@@ -9,13 +9,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-11-15 17:26+0000\n"
-"PO-Revision-Date: 2010-10-24 12:49+0100\n"
-"Last-Translator: Daniel Șerbănescu <cyber19rider@gmail.com>\n"
+"PO-Revision-Date: 2010-11-16 00:54+0300\n"
+"Last-Translator: Lucian Adrian Grijincu <lucian.grijincu@gmail.com>\n"
 "Language-Team: Romanian Gnome Team <gnomero-list@lists.sourceforge.net>\n"
+"Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ro\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
 "20)) ? 1 : 2);;\n"
 "X-Generator: Virtaal 0.6.1\n"
@@ -1851,6 +1851,8 @@ msgid ""
 "For a color managed workflow, each connected device should have one or more "
 "color profiles associated with it."
 msgstr ""
+"Pentru un flux de lucru cu culori gestionate, fiecare dispozitiv conectat ar "
+"trebui să aibă una sau mai multe profiluri de culoare asociate cu aceasta."
 
 #: ../data/gcm-prefs.ui.h:25
 msgid "Gamma:"
