--- a/po/ug.po
+++ b/po/ug.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager\n"
-"POT-Creation-Date: 2010-11-08 16:38+0000\n"
+"POT-Creation-Date: 2010-11-15 22:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Gheyret Kenji<gheyret@yahoo.com>\n"
 "Language-Team: Uyghur Computer Science Association <UKIJ@yahoogroups.com>\n"
@@ -206,39 +206,39 @@ msgstr ""
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1418
 msgid "Cannot create profile: No device is selected"
-msgstr ""
+msgstr "profile قۇرغىلى بولمىدى: ئۈسكىنە تاللانمىغان"
 
 #. TRANSLATORS: this is when the button is insensitive because the distro compiled GCM without VTE
 #: ../src/cc-color-panel.c:1429
 msgid "Cannot create profile: Virtual console support is missing"
-msgstr ""
+msgstr "profile قۇرغىلى بولمىدى: مەۋھۇم console نى ئىشلىتىش ئىقتىدارى يوق"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1441
 msgid "Cannot create profile: The display device is not connected"
-msgstr ""
+msgstr "profile قۇرغىلى بولمىدى: ئېكران ئۈسكۈنىسى باغلانمىغان"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1449
 msgid "Cannot create profile: The display driver does not support XRandR 1.3"
-msgstr ""
+msgstr "profile قۇرغىلى بولمىدى: ئېكران قوزغاتقۇسىدا XRandR 1.3 نى ئىشلەتكىلى بولمايدىكەن"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1457 ../src/cc-color-panel.c:1472
 msgid "Cannot create profile: The measuring instrument is not plugged in"
-msgstr ""
+msgstr "profile قۇرغىلى بولمىدى: ئۆلچەش ئۈسكۈنىسى چېتىلمىغان"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1480
 msgid ""
 "Cannot create profile: The measuring instrument does not support printer "
 "profiling"
-msgstr ""
+msgstr "profile قۇرغىلى بولمىدى: ئۆلچەش ئۈسكۈنىسىدە پرىنتېرنى profiling قىلىشنى ئىشلەتكىلى بولمايدىكەن"
 
 #. TRANSLATORS: this is when the button is insensitive
 #: ../src/cc-color-panel.c:1487
 msgid "Cannot create a profile for this type of device"
-msgstr ""
+msgstr "بۇ تىپتىكى ئۈسكۈنىنىڭ profile نى قۇرغىلى بولمىدى"
 
 #: ../src/cc-color-panel.c:1563
 msgid "Per-device settings not supported. Check your display driver."
@@ -325,7 +325,7 @@ msgid "More color profiles could be automatically installed."
 msgstr ""
 
 #. TRANSLATORS: we use this mode at login as we're sure there are no previous settings to clear
-#: ../src/gcm-apply.c:114
+#: ../src/gcm-apply.c:115
 msgid "Do not attempt to clear previously applied settings"
 msgstr ""
 
@@ -834,7 +834,7 @@ msgstr ""
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-calibrate.c:840
 msgid "CIE values"
-msgstr ""
+msgstr "CIE قىممەتلىرى"
 
 #: ../src/gcm-calibrate.c:916
 msgid "Open"
@@ -937,7 +937,7 @@ msgstr ""
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-dialog.c:571
 msgid "CMP DT 003"
-msgstr ""
+msgstr "CMP DT 003"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate-dialog.c:575
@@ -1194,7 +1194,7 @@ msgstr ""
 #. TRANSLATORS: this is the rendering intent of the printer
 #: ../src/gcm-inspect.c:546
 msgid "CMYK Colorspace:"
-msgstr ""
+msgstr "CMYK رەڭ بوشلۇقى:"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:574
@@ -1444,7 +1444,7 @@ msgstr ""
 #: ../src/gcm-viewer.c:291
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
-msgstr ""
+msgstr "بۇ profile نى سىستېمىڭىزدىن راستلا مەڭگۈلۈككە چىقىرىۋېتەمسىز؟"
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-viewer.c:294
@@ -1524,7 +1524,7 @@ msgstr ""
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-viewer.c:622
 msgid "CMY"
-msgstr ""
+msgstr "CMY"
 
 #. TRANSLATORS: if the device has a VCGT profile
 #: ../src/gcm-viewer.c:754
@@ -1554,7 +1554,7 @@ msgstr "يوق"
 #. TRANSLATORS: combo-entry, this is a graph plot type (look it up on google...)
 #: ../src/gcm-viewer.c:1007
 msgid "CIE 1931 xy"
-msgstr ""
+msgstr "CIE 1931 xy"
 
 #. TRANSLATORS: combo-entry, this is a graph plot type (what goes in, v.s. what goes out)
 #: ../src/gcm-viewer.c:1010
@@ -1585,7 +1585,7 @@ msgstr "يورۇقلۇق:"
 
 #: ../data/gcm-calibrate.ui.h:3
 msgid "CRT"
-msgstr ""
+msgstr "CRT"
 
 #. The user wants to create images suitable to send to a photo-processing lab
 #: ../data/gcm-calibrate.ui.h:5
@@ -1702,7 +1702,7 @@ msgstr ""
 #. This is a button to add a virtual device
 #: ../data/gcm-prefs.ui.h:3
 msgid "Add d_evice…"
-msgstr ""
+msgstr "ئۈسكۈنە قوش(_E)..."
 
 #. Profiles that can be added to the device
 #: ../data/gcm-prefs.ui.h:5
@@ -1712,7 +1712,7 @@ msgstr "ئىشلىتىلىشچان سەپلىمە ھۆججەت"
 #. Technical color word for softproof rendering intent
 #: ../data/gcm-prefs.ui.h:9
 msgid "CMYK:"
-msgstr ""
+msgstr "CMYK:"
 
 #: ../data/gcm-prefs.ui.h:11
 msgid "Contrast:"
